--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -5,12 +5,12 @@
     <%= devise_error_messages! %>
 
     <div class="form-group">
-      <%= f.label :email %><br />
+      <%= f.label :email, 'E-mail' %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control' %>
     </div>
 
     <div class="actions">
-      <%= f.submit "Resend confirmation instructions" %>
+      <%= f.submit "Reenviar instruções de confirmação", class: 'btn btn-success' %>
     </div>
   <% end %>
 
