--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,34 @@
 <div class="d-flex flex-column justify-content-center">
 
-  <div class="w-50">
-    <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
-    <% end %>
-
-    <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
-
-  </div>
-
   <h2 class="text-center">Inscrever-se</h2>
 
-  <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
     <div class="card mt-4 mx-auto shadow-sm p-3 mb-5 bg-white rounded" style="width: 18rem;">
 
       <div class="card-body">
 
         <div class="form-group">
-          <%= f.label :email %>
+          <%= f.label :email, 'E-mail' %>
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
         </div>
 
         <div class="form-group">
-          <%= f.label :senha %>
-          <% if @minimum_password_length %>
-            <em>(No mínimo <%= @minimum_password_length %> caracteres)</em>
-          <% end %><br />
-          <%= f.password_field :senha, autocomplete: "new-password", class: 'form-control' %>
+          <%= f.label :username, 'Username' %>
+          <%= f.text_field :username, class: 'form-control' %>
         </div>
 
         <div class="form-group">
-          <%= f.label :confirmar_senha %><br />
-          <%= f.password_field :confirmar_senha, autocomplete: "new-password", class: 'form-control' %>
+          <%= f.label :password, 'Senha' %>
+          <% if @minimum_password_length %>
+            <em>(No mínimo <%= @minimum_password_length %> caracteres)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password_confirmation, 'Confirme sua senha' %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
         </div>
 
         <div class="actions pb-3">
