--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -2,6 +2,10 @@
   <%= link_to "Já possui uma conta?", new_session_path(resource_name), class: 'text-secondary' %><br />
 <% end -%>
 
+<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <%= link_to "Criar uma nova conta", new_registration_path(resource_name), class: 'text-secondary' %><br />
+<% end -%>
+
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to "Esqueceu sua senha?", new_password_path(resource_name), class: 'text-secondary' %><br />
 <% end -%>
