--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,24 @@
-<h1>
-  Olá <strong><%= current_user.username %></strong>, seja bem vindo!!!
-</h1>
+<div class="row">
+
+  <div class="col-sm-12">
+
+    <div class="pb-4 pt-1">
+      <h2>Listagem de Filmes</h2>
+    </div>
+
+    <table class="table-responsive table-hover">
+      <thead class="py-2">
+        <tr>
+          <th class="w-25 text-left">Título</th>
+          <th class="w-25 text-center">Episódio</th>
+          <th style="width: 20%" class="text-center">Diretor</th>
+          <th style="width: 5%" class="text-center">Lançamento</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render 'books' %>
+      </tbody>
+    </table>
+  </div>
+
+</div>
