--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,55 +1,61 @@
 <div class="d-flex flex-column justify-content-center">
 
-  <h2>Editar <%= resource_name.to_s.humanize %></h2>
+  <div class="card mt-4 mb-5 bg-white rounded w-100">
 
-  <div class="col-sm-6">
-    
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= devise_error_messages! %>
+    <div class="card-body col-sm-6">
 
-      <div class="field">
-        <%= f.label :email, 'E-mail' %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+      <div class="pb-4 pt-1">
+        <h2>Editar <%= resource_name.to_s.humanize %></h2>
       </div>
 
-      <div class="form-group">
-        <%= f.label :username, 'Username' %>
-        <%= f.text_field :username, class: 'form-control' %>
-      </div>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <div class="form-group">
+          <%= f.label :email, 'E-mail' %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :username, 'Username' %>
+          <%= f.text_field :username, class: 'form-control' %>
+        </div>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Atualmente aguardando a confirmação do e-mail: <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <div class="form-group">
+          <%= f.label :current_password, 'Senha atual' %><br />
+          <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password, 'Senha' %> <i>(Deixe em branco caso não queira alterar sua senha)</i><br />
+          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+          <% if @minimum_password_length %>
+            <br />
+            <em>No mínimo <%= @minimum_password_length %> caracteres</em>
+          <% end %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password_confirmation, 'Confirme sua senha' %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+        </div>
+
+        <div class="actions pb-3">
+          <%= f.submit "Atualizar", class: 'btn btn-success' %>
+        </div>
       <% end %>
 
-      <div class="field">
-        <%= f.label :password, 'Senha' %> <i>(leave blank if you don't want to change it)</i><br />
-        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
-        <% if @minimum_password_length %>
-          <br />
-          <em><%= @minimum_password_length %> characters minimum</em>
-        <% end %>
-      </div>
+      <h3>Cancel my account</h3>
 
-      <div class="field">
-        <%= f.label :password_confirmation, 'Confirme sua senha' %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div>
+      <p>Insatisfeito? <%= button_to "Cancelar conta", registration_path(resource_name), data: { confirm: "Você tem certeza?" }, method: :delete, class: 'btn btn-danger' %></p>
 
-      <div class="field">
-        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-        <%= f.password_field :current_password, autocomplete: "current-password" %>
-      </div>
+      <%= link_to "Back", :back, class: 'text-muted' %>
 
-      <div class="actions">
-        <%= f.submit "Update" %>
-      </div>
-    <% end %>
+    </div>
 
-    <h3>Cancel my account</h3>
-
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-    <%= link_to "Back", :back %>
   </div>
 
 </div>
