Adiciona botoes para LIKE e DISLIKE na tabela de Filmes. Altera username do user para Unique

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
 
-  <div class="col-sm-12">
+  <div class="col-sm-12 mt-3 p-5 bg-white">
 
-    <div class="pb-4 pt-1">
+    <div class="pb-5">
       <h2>Listagem de Filmes</h2>
     </div>
 
@@ -13,6 +13,8 @@
           <th class="w-25 text-center">Episódio</th>
           <th style="width: 20%" class="text-center">Diretor</th>
           <th style="width: 5%" class="text-center">Lançamento</th>
+          <th style="width: 15%" class="text-center">Like</th>
+          <th style="width: 10%" class="text-center">Dislike</th>
         </tr>
       </thead>
       <tbody>
