--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,10 @@
-<div class="d-flex flex-column justify-content-center">
+<div class="row">
 
-  <div class="card mt-4 mb-5 bg-white rounded w-100">
+  <div class="bg-white mt-3 w-100">
 
-    <div class="card-body col-sm-6">
+    <div class="col-sm-6 p-5 e">
 
-      <div class="pb-4 pt-1">
+      <div class="pb-4">
         <h2>Editar <%= resource_name.to_s.humanize %></h2>
       </div>
 
@@ -17,17 +17,12 @@
 
         <div class="form-group">
           <%= f.label :username, 'Username' %>
-          <%= f.text_field :username, class: 'form-control' %>
+          <%= f.text_field :username, value: current_user.username, class: 'form-control' %>
         </div>
 
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <div>Atualmente aguardando a confirmação do e-mail: <%= resource.unconfirmed_email %></div>
         <% end %>
-
-        <div class="form-group">
-          <%= f.label :current_password, 'Senha atual' %><br />
-          <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
-        </div>
 
         <div class="form-group">
           <%= f.label :password, 'Senha' %> <i>(Deixe em branco caso não queira alterar sua senha)</i><br />
@@ -43,16 +38,22 @@
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
         </div>
 
+        <div class="form-group">
+          <%= f.label :current_password, 'Digite sua senha para confirmar as alterações' %><br />
+          <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control', required: true %>
+        </div>
+
         <div class="actions pb-3">
           <%= f.submit "Atualizar", class: 'btn btn-success' %>
         </div>
+
       <% end %>
 
-      <h3>Cancel my account</h3>
+      <h3>Cancelar sua conta</h3>
 
-      <p>Insatisfeito? <%= button_to "Cancelar conta", registration_path(resource_name), data: { confirm: "Você tem certeza?" }, method: :delete, class: 'btn btn-danger' %></p>
+      <%= button_to "Cancelar conta", registration_path(resource_name), data: { confirm: "Você tem certeza?" }, method: :delete, class: 'btn btn-danger mb-4' %>
 
-      <%= link_to "Back", :back, class: 'text-muted' %>
+      <%= link_to "Voltar", :back, class: 'text-muted' %>
 
     </div>
 
