--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-light">
 
-      <strong><%= current_user.nil? ? 'Visitante' : current_user.username %></strong>
+      <h2>
+        Bem vindo, <strong><%= current_user.nil? ? 'Visitante' : current_user.username %></strong>
+      </h2>
 
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb">
         <span class="navbar-toggler-icon"></span>
