Altera nome da tabela para films

--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -3,7 +3,7 @@
   <div class="col-sm-12 mt-3 p-5 bg-white">
 
     <div class="pb-5">
-      <h2>Listagem de Filmes</h2>
+      <h2>Filmes mais votados</h2>
     </div>
 
     <table class="table-responsive table-hover">
@@ -18,7 +18,7 @@
         </tr>
       </thead>
       <tbody>
-        <%= render 'books' %>
+        <%= render 'evaluations' %>
       </tbody>
     </table>
   </div>
