Adiciona opcao para limpar avaliacao feita e centraliza mensagens de retorno

--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -10,11 +10,12 @@
       <thead class="py-2">
         <tr>
           <th class="w-25 text-left">Título</th>
-          <th class="w-25 text-center">Episódio</th>
+          <th style="width: 15%" class="text-center">Episódio</th>
           <th style="width: 20%" class="text-center">Diretor</th>
           <th style="width: 5%" class="text-center">Lançamento</th>
           <th style="width: 15%" class="text-center">Like</th>
           <th style="width: 10%" class="text-center">Dislike</th>
+          <th style="width: 10%" class="text-center">Limpar</th>
         </tr>
       </thead>
       <tbody>
