--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -4,6 +4,9 @@
 
     <div class="pb-5">
       <h2>Listagem de Filmes</h2>
+      <h6>
+        <strong>Máximo de avaliações por usuário: </strong><%= max_evaluation_num %>
+      </h6>
     </div>
 
     <table class="table-responsive table-hover">
