--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -21,10 +21,17 @@
           <th style="width: 10%" class="text-center">Limpar</th>
         </tr>
       </thead>
-      <tbody>
-        <%= render 'films' %>
-      </tbody>
-    </table>
+
+      <% if @films.length > 0 %>
+        <tbody>
+          <%= render 'films' %>
+        </tbody>
+      <% else %>
+        <div class="text-center mb-5">
+          <h5 class="text-danger">Nenhum filme encontrado</h5>
+        </div>
+      <% end %>
+      </table>
   </div>
 
 </div>
