Ajusta o retorno da api caso ocorra erro

--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -22,7 +22,7 @@
         </tr>
       </thead>
 
-      <% if @films.length > 0 %>
+      <% if !@films.nil? %>
         <tbody>
           <%= render 'films' %>
         </tbody>
