fix ordenacao de filmes mais votados

--- a/app/views/evaluations/_evaluations.html.erb
+++ b/app/views/evaluations/_evaluations.html.erb
@@ -1,7 +1,7 @@
 <% @evaluations.each do |evaluation| %>
 
   <tr class="px-2">
-    <td class="text-left">
+    <td style="width: 5%" class="text-left">
       <%= icon('fas', 'film', class: 'fa-2x py-3 text-info') %>
     </td>
     <td class="text-left">
