--- a/app/views/films/_films.html.erb
+++ b/app/views/films/_films.html.erb
@@ -1,6 +1,9 @@
 <% @films.each do |film| %>
   <tr class="px-2">
     <td class="text-left">
+      <%= icon('fas', 'film', class: 'fa-2x py-3 text-info') %>
+    </td>
+    <td class="text-left">
       <%= film['title'] %>
     </td>
     <td class="text-center">
