--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -12,6 +12,7 @@
     <table class="table-responsive table-hover">
       <thead class="py-2">
         <tr>
+          <th style="width: 5%" class="text-left"></th>
           <th class="w-25 text-left">Título</th>
           <th style="width: 15%" class="text-center">Episódio</th>
           <th style="width: 20%" class="text-center">Diretor</th>
